refactor(bug): bug 조회를 infrastructure-module query DAO로 이관하고 CQRS 서비스 분리
core bug/application을 제거하고 도메인당 CQRS 구조로 전환했다.
- 제보 등록은 BugReport+BugReportImage 2개 애그리거트를 한 트랜잭션에서 저장하는
  크로스 애그리거트 오케스트레이션이라 도메인 서비스 BugReportRegistrationService(순수 POJO)로
  하강시키고 infrastructure의 DomainServiceConfig에 빈 등록했다.
- 표현 목적 조회는 infrastructure-module bug/query의 BugReportQueryDao로 이관했다.
  Result·SearchCondition도 query 패키지 소유로 옮겼으며, 상세의 imageFileIds는 단일 투영이
  불가능해 스칼라 전용 BugReportDetailProjection과 최종 BugReportDetailResult로 분리했다.
- web-api/admin-api의 facade BugReportService를 각각 BugReportCommandService(@Transactional)와
  admin BugReportQueryService(readOnly)로 분해했다. web-api는 조회 엔드포인트가 없어 QueryService를
  두지 않았다. Command DTO 4종은 삭제했다.
- BugReportRepository/BugReportImageRepository에서 read 메서드를 제거해 write 포트를 순수화하고,
  어댑터의 QueryDSL과 미사용 JpaRepository 쿼리 메서드를 정리했다.

동작 변경 없음(응답 필드·이미지 정렬·상태전이 검증·에러코드 동일), DDL 무변경.